[package]
name = "geyser-grpc-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "client-grpc"

[[bin]]
name = "server"

[dependencies]
anyhow = "1.0.62"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
indicatif = "0.17.9"
log = "0.4.17"
maplit = "1.0.2"
prost = "0.13.1"
quinn = "0.11.6"
rcgen = "0.13"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "fs", "signal"] }
tokio-stream = "0.1.11"
tonic = "0.12.1"
yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = "4.0.0"
